--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,35 @@ canvas {
   display: block;
 }
 
+#loader {
+  position: fixed;
+  inset: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  z-index: 9999;
+  background-color: transparent;
+}
+
+.loader-text {
+  color: white;
+  font-size: 2rem;
+  font-weight: bold;
+  position: relative;
+  z-index: 10;
+}
+
+.stripe {
+  border-radius: 9999px;
+  pointer-events: none;
+  width: 150vw;
+  height: 10rem;
+  position: absolute;
+  left: 0;
+  right: 0;
+}
+
 .question__box {
   width: 200px;
   background-color: rgba(255, 255, 255, 0.7);
