--- a/src/index.css
+++ b/src/index.css
@@ -91,3 +91,23 @@ canvas {
     }
   }
 }
+
+.container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.left {
+  width: 100px;
+  height: 100px;
+  background-color: rgba(255, 0, 0, 0.2);
+}
+
+.right {
+  width: 100px;
+  height: 100px;
+  background-color: rgba(255, 0, 0, 0.2);
+}
